MAIN_PROJECT/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
15:44:43 **** Incremental Build of configuration Nios II for project nios_print ****
make all 
Info: Building ../nios_print_bsp/
C:/Software/intelFPGA_lite/18.1/nios2eds/bin/gnu/H-x86_64-mingw32/bin/make --no-print-directory -C ../nios_print_bsp/
[BSP build complete]
Info: Compiling hello_world_small.c to obj/default/hello_world_small.o
nios2-elf-gcc -xc -MP -MMD -c -I../nios_print_bsp//HAL/inc -I../nios_print_bsp/ -I../nios_print_bsp//drivers/inc  -pipe -D__hal__ -DALT_NO_C_PLUS_PLUS -DALT_NO_CLEAN_EXIT -D'exit(a)=_exit(a)' -DALT_NO_EXIT -DALT_USE_DIRECT_DRIVERS -DALT_NO_INSTRUCTION_EMULATION -DALT_USE_SMALL_DRIVERS -DSMALL_C_LIB -DALT_SINGLE_THREADED    -Os -g -Wall   -mno-hw-div -mno-hw-mul -mno-hw-mulx -mgpopt=global  -o obj/default/hello_world_small.o hello_world_small.c
hello_world_small.c: In function 'main':
hello_world_small.c:107:3: error: 'tiemr' undeclared (first use in this function)
   tiemr = 0;
   ^
hello_world_small.c:107:3: note: each undeclared identifier is reported only once for each function it appears in
make: *** [obj/default/hello_world_small.o] Error 1
15:44:48 **** Incremental Build of configuration Nios II for project nios_print ****
make all 
Info: Building ../nios_print_bsp/
C:/Software/intelFPGA_lite/18.1/nios2eds/bin/gnu/H-x86_64-mingw32/bin/make --no-print-directory -C ../nios_print_bsp/
[BSP build complete]
Info: Compiling hello_world_small.c to obj/default/hello_world_small.o
nios2-elf-gcc -xc -MP -MMD -c -I../nios_print_bsp//HAL/inc -I../nios_print_bsp/ -I../nios_print_bsp//drivers/inc  -pipe -D__hal__ -DALT_NO_C_PLUS_PLUS -DALT_NO_CLEAN_EXIT -D'exit(a)=_exit(a)' -DALT_NO_EXIT -DALT_USE_DIRECT_DRIVERS -DALT_NO_INSTRUCTION_EMULATION -DALT_USE_SMALL_DRIVERS -DSMALL_C_LIB -DALT_SINGLE_THREADED    -Os -g -Wall   -mno-hw-div -mno-hw-mul -mno-hw-mulx -mgpopt=global  -o obj/default/hello_world_small.o hello_world_small.c
Info: Linking nios_print.elf
nios2-elf-g++  -T'../nios_print_bsp//linker.x' -msys-crt0='../nios_print_bsp//obj/HAL/src/crt0.o' -msys-lib=hal_bsp -L../nios_print_bsp/  -msmallc  -Wl,-Map=nios_print.map   -Os -g -Wall   -mno-hw-div -mno-hw-mul -mno-hw-mulx -mgpopt=global  -o nios_print.elf obj/default/hello_world_small.o -lm -msys-lib=m
nios2-elf-insert nios_print.elf --thread_model hal --cpu_name nios2_gen2_0 --qsys true --simulation_enabled false --stderr_dev jtag_uart_0 --stdin_dev jtag_uart_0 --stdout_dev jtag_uart_0 --sopc_system_name nios --quartus_project_dir "c:/Users/Gertjan/OneDrive/Projects/Courses_FPGA/MAIN_PROJECT" --jdi ../..//output_files/colourfiltering.jdi --sopcinfo c:/Users/Gertjan/OneDrive/Projects/Courses_FPGA/MAIN_PROJECT/software/nios_print_bsp/../../nios.sopcinfo
Info: (nios_print.elf) 660 Bytes program size (code + initialized data).
Info:                  7528 Bytes free for stack + heap.
Info: Creating nios_print.objdump
nios2-elf-objdump --disassemble --syms --all-header --source nios_print.elf >nios_print.objdump
[nios_print build complete]
15:44:50 **** Incremental Build of configuration Nios II for project nios_print_bsp ****
make all 
[BSP build complete]
15:45:01 **** Build of configuration Nios II for project nios_print ****
make all 
Info: Building ../nios_print_bsp/
C:/Software/intelFPGA_lite/18.1/nios2eds/bin/gnu/H-x86_64-mingw32/bin/make --no-print-directory -C ../nios_print_bsp/
[BSP build complete]
[nios_print build complete]
15:45:03 **** Incremental Build of configuration Nios II for project nios_print ****
make all 
Info: Building ../nios_print_bsp/
C:/Software/intelFPGA_lite/18.1/nios2eds/bin/gnu/H-x86_64-mingw32/bin/make --no-print-directory -C ../nios_print_bsp/
[BSP build complete]
[nios_print build complete]
16:38:18 **** Build of configuration Nios II for project nios_print ****
make all 
Info: Building ../nios_print_bsp/
C:/Software/intelFPGA_lite/18.1/nios2eds/bin/gnu/H-x86_64-mingw32/bin/make --no-print-directory -C ../nios_print_bsp/
[BSP build complete]
Info: Compiling hello_world_small.c to obj/default/hello_world_small.o
nios2-elf-gcc -xc -MP -MMD -c -I../nios_print_bsp//HAL/inc -I../nios_print_bsp/ -I../nios_print_bsp//drivers/inc  -pipe -D__hal__ -DALT_NO_C_PLUS_PLUS -DALT_NO_CLEAN_EXIT -D'exit(a)=_exit(a)' -DALT_NO_EXIT -DALT_USE_DIRECT_DRIVERS -DALT_NO_INSTRUCTION_EMULATION -DALT_USE_SMALL_DRIVERS -DSMALL_C_LIB -DALT_SINGLE_THREADED    -Os -g -Wall   -mno-hw-div -mno-hw-mul -mno-hw-mulx -mgpopt=global  -o obj/default/hello_world_small.o hello_world_small.c
Info: Linking nios_print.elf
nios2-elf-g++  -T'../nios_print_bsp//linker.x' -msys-crt0='../nios_print_bsp//obj/HAL/src/crt0.o' -msys-lib=hal_bsp -L../nios_print_bsp/  -msmallc  -Wl,-Map=nios_print.map   -Os -g -Wall   -mno-hw-div -mno-hw-mul -mno-hw-mulx -mgpopt=global  -o nios_print.elf obj/default/hello_world_small.o -lm -msys-lib=m
nios2-elf-insert nios_print.elf --thread_model hal --cpu_name nios2_gen2_0 --qsys true --simulation_enabled false --stderr_dev jtag_uart_0 --stdin_dev jtag_uart_0 --stdout_dev jtag_uart_0 --sopc_system_name nios --quartus_project_dir "c:/Users/Gertjan/OneDrive/Projects/Courses_FPGA/MAIN_PROJECT" --jdi ../..//output_files/colourfiltering.jdi --sopcinfo c:/Users/Gertjan/OneDrive/Projects/Courses_FPGA/MAIN_PROJECT/software/nios_print_bsp/../../nios.sopcinfo
Info: (nios_print.elf) 660 Bytes program size (code + initialized data).
Info:                  7528 Bytes free for stack + heap.
Info: Creating nios_print.objdump
nios2-elf-objdump --disassemble --syms --all-header --source nios_print.elf >nios_print.objdump
[nios_print build complete]
16:38:20 **** Incremental Build of configuration Nios II for project nios_print ****
make all 
Info: Building ../nios_print_bsp/
C:/Software/intelFPGA_lite/18.1/nios2eds/bin/gnu/H-x86_64-mingw32/bin/make --no-print-directory -C ../nios_print_bsp/
[BSP build complete]
[nios_print build complete]
17:07:11 **** Build of configuration Nios II for project nios_print ****
make all 
Info: Building ../nios_print_bsp/
C:/Software/intelFPGA_lite/18.1/nios2eds/bin/gnu/H-x86_64-mingw32/bin/make --no-print-directory -C ../nios_print_bsp/
[BSP build complete]
[nios_print build complete]
17:07:13 **** Incremental Build of configuration Nios II for project nios_print ****
make all 
Info: Building ../nios_print_bsp/
C:/Software/intelFPGA_lite/18.1/nios2eds/bin/gnu/H-x86_64-mingw32/bin/make --no-print-directory -C ../nios_print_bsp/
[BSP build complete]
[nios_print build complete]
